--- a/about-gia.html
+++ b/about-gia.html
@@ -24,7 +24,7 @@
                 Minimalistic, component-based JavaScript framework for server rendered websites. 2.68 Kb minified gzipped with all it’s parts loaded with a script tag.
                 Gives you super powers and repels spaghetti code.
             </p>
-            <a href="/index.html" class="button button--purple-border button--fade">Back</a>
+            <a href="./index.html" class="button button--purple-border button--fade">Back</a>
             <a href="https://github.com/giantcz/gia" class="button button--purple button--fade">Repo</a>
         </div>
     </main>
