--- a/about-swup.html
+++ b/about-swup.html
@@ -28,7 +28,7 @@
                 <li>Takes care of browser history</li>
                 <li>much more...</li>
             </ul>
-            <a href="/index.html" class="button button--blue-border button--fade">Back</a>
+            <a href="./index.html" class="button button--blue-border button--fade">Back</a>
             <a href="https://github.com/gmrchk/swup" class="button button--blue button--fade">Repo</a>
         </div>
     </main>
