--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div g-ref="display" class="increment__display"></div>
                 <button g-ref="button" class="increment__button button button--white">Increment</button>
             </div>
-            <a href="/about-swup.html" class="button button--blue button--fade">About swup</a>
-            <a href="/about-gia.html" class="button button--purple button--fade">About gia</a>
+            <a href="./about-swup.html" class="button button--blue button--fade">About swup</a>
+            <a href="./about-gia.html" class="button button--purple button--fade">About gia</a>
         </div>
     </main>
     <script src="./assets/app.js"></script>
