updated the names

--- a/about-gia.html
+++ b/about-gia.html
@@ -19,7 +19,7 @@
     </header>
     <main class="wrapper transition-fade" id="swup">
         <div class="wrapper-inner">
-            <h1 g-component="SeparateText">About Gia</h1>
+            <h1 g-component="SeparateText">About Robinson</h1>
             <p g-component="SeparateText" g-options='{"delay": 0.01}'>
                 Minimalistic, component-based JavaScript framework for server rendered websites. 2.68 Kb minified gzipped with all it’s parts loaded with a script tag.
                 Gives you super powers and repels spaghetti code.
