--- a/about-swup.html
+++ b/about-swup.html
@@ -19,7 +19,7 @@
     </header>
     <main class="wrapper transition-fade" id="swup">
         <div class="wrapper-inner">
-            <h1 g-component="SeparateText">About swup</h1>
+            <h1 g-component="SeparateText">About Robinson</h1>
             <ul>
                 <li>Makes creating transitions between website pages ridiculously easy (it's beginner friendly too).</li>
                 <li>Allows to replace any blocks on the page.</li>
