--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main class="wrapper transition-fade" id="swup">
         <div class="wrapper-inner">
-            <h1 g-component="SeparateText">Hello World</h1>
+            <h1 g-component="SeparateText">Hello Robinson</h1>
             <div g-component="Increment" class="increment">
                 <div g-ref="display" class="increment__display"></div>
                 <button g-ref="button" class="increment__button button button--white">Increment</button>
